2004-02-27  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeCanvas.cpp (GL_GLEXT_LEGACY): Use this so that we get
	glMultiTexCoord...ARB function prototypes.

	* src/CelShader.cpp (init): Added a scale to the texcoord transform.

	* src/Ashikhmin.cpp: Make Ashikhmin leaner, so it fits in ATI limits.

	* src/ShrikeFrame.cpp (initShaderList): Sort listbox

	* src/SimplePhong.cpp: Added simple phong example for educational uses.

	* src/SimpleDiffuse.cpp: Added simple diffuse example for
	educational uses.

	* src/WobbleShader.cpp: Added Mr Wobble!

2004-02-20  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/CelShader.cpp (init): Crazy CelShader craziness.
	(init): CelShader improvements.

	* src/DiscoShader.cpp (init): Use mv_inverse to transform the
	reflection vector. Also make the texcoords move with time.

	* src/Globals.hpp: Added mv_inverse.

	* src/UniformPanel.cpp: Added some cheap animation. Push the
	checkbox and bask in the glory of animated variables.

2004-02-19  Bryan Chan <b8chan@uwaterloo.ca
	* src/WorleyShader.cpp: Cleaned up worley shader

	* src/DiscoShader.cpp: Added a funky cell noise demo
	(currently with a time slider in anticipation of animation working
	:)
	
2004-02-19  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/UniformPanel.cpp (setShader): Don't display widgets for constants.
	(setShader): Don't display widgets for unnamed uniforms.

	* src/CelShader.cpp: Added the super awesome CelShader using
	Shader Algebra.

	* src/ShrikeFrame.cpp (openModel): Use SHMEDIA_DIR.
	(ShrikeFrame): Use SHMEDIA_DIR.

	* configure.ac: Use WX_FIND_WX_CONFIG

	* src/Makefile.am: Use ${WX_CONFIG} instead of wx-config.

	* config/wx.m4: Added this file, to check for wx-config.

	* configure.ac: Use SHMEDIA_WITH_SHMEDIA_DIR.

	* config/shmedia.m4: Added this file.
